syntax = "proto3";

package postgres_proto;

option go_package = "postgres.proto";


service Postgres{
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
}


message RegisterRequest {
  string name = 1;
  string email = 2;
  string password_hash = 3;
}

message RegisterResponse {
  int64 user_id = 1;
}

message LoginRequest {
  string email = 1;
  string password_hash = 2;
}

message LoginResponse {
  string token = 1;
}